--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@media screen and (max-width: 400px) {
+  .app_body {
+    position: relative;
+    top: 60px;
+  }
+}
